--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.0.0",
     "node-sass": "^4.11.0",
     "nuxt": "^2.0.0",
+    "qrcode.vue": "^1.6.2",
     "sanitize-html": "^1.20.0",
     "sass-loader": "^7.1.0",
     "string_decoder": "^1.2.0",
